<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:id="@+id/linearFavorite">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewFavFROM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/from"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/textViewFavTO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/to"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/textViewFavMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/measure"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/textViewFavFROMValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/textViewFavTOValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/textViewFavMeasureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="15sp"
            android:visibility="gone"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/btnDeleteFav"
            android:background="@android:drawable/ic_delete"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </LinearLayout>
</LinearLayout>