<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ConversionActivity"
    android:id="@+id/container">

<android.support.v7.widget.Toolbar
    android:id="@+id/my_toolbar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:minHeight="?attr/actionBarSize"
    android:background="?attr/colorPrimary"/>

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="?attr/actionBarSize"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/linearWrite">

            <EditText
                android:id="@+id/valueEditText"
                android:layout_width="0dp"
                android:maxLength="10"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:inputType="numberDecimal"
                android:layout_weight="2"
                android:hint="@string/hintConversion"
                />
            <ImageButton
                android:id="@+id/btnSeeFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/favlist"
                android:scaleType="fitCenter"
                />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearSpinnerMeasure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/linearWrite"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/measure"
                android:visibility="gone"
                android:id="@+id/textLabelMeasure"
                />
            <Spinner
                android:id="@+id/spinnerMeasure"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/spinner">
            </Spinner>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearFROM"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/linearSpinnerMeasure">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/from"
            />
            <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearButtons"
        android:layout_below="@+id/linearFROM"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/btnExchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/exchange"
                android:scaleType="centerInside"
                />
            <ImageButton
                android:id="@+id/btnAddFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/favoff"
                android:scaleType="centerInside"
                />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearTO"
        android:layout_below="@+id/linearButtons"
        android:layout_marginTop="-10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/to"
            />
        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/linearTO"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_centerHorizontal="true">
            <Button
            android:id="@+id/btnCalculate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConvert"/>
            <TextView
                android:id="@+id/resultTextViewFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/equalsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:visibility="gone"
                android:text="="/>
            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
